apply code review suggestions

--- a/docs/authentication/saml/azure.mdx
+++ b/docs/authentication/saml/azure.mdx
@@ -8,21 +8,19 @@ description: Learn how to integrate Microsoft Azure AD with Clerk using SAML SSO
 <TutorialHero
   beforeYouStart={[
     {
-      title: "Set up a Clerk application",
-      link: "/docs/quickstarts/setup-clerk",
+      title: "Add the Enhanced authentication add-on to your Pro plan",
+      link: "https://clerk.com/pricing"
     },
     {
-      title: "Add the appropriate Clerk SDK to your application",
-      link: "/docs/quickstarts/overview",
-    },
+      title: "Enable email address as an identifier for your application.",
+      link: "/docs/authentication/configuration/sign-up-sign-in-options#identifiers",
+    }
   ]}
 >
 
 - Use Microsoft Azure Active Directory (Azure AD) to enable single sign-on (SSO) via SAML for your Clerk application.
 
 </TutorialHero>
-
-Integrating Microsoft Azure AD with Clerk allows you to use it as an Identity Provider (IdP) for your Clerk application to authenticate your users and manage their access to your application via SAML SSO.
 
 ## Tutorial
 
@@ -35,16 +33,13 @@ To create a SAML connection in Clerk:
 1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com).
 2. In the navigation sidebar, select **User & Authentication > [Enterprise Connections](https://dashboard.clerk.com/last-active?path=user-authentication/enterprise-connections)**.
 3. Select the **Create connection** button.
-4. You will be presented with a modal to create a new connection. Fill in the required fields.
-- **Name** - A unique name for the connection. This is so you can tell your connections apart.
-- **Domain** - The email domain for which you will enable Enterprise SSO.
-- **Identity Provider** - The IdP you are using. For this tutorial, select **Microsoft Azure AD**.
-5. Once you have filled in these fields, you will be directed to the **Connection** page which has the configuration settings for the connection you just created. **Do not select the Enable connection toggle just yet.** You need to fully configure your IdP first before exposing your connection to your users while you're in the, sometimes long, process of configuring and testing it.
+4. You will be presented with a modal to create a new connection. Fill in the required fields and for the **Identity Provider**, select **Microsoft Azure AD**.
+5. Next, on the **Connection** page, **do not select the Enable connection toggle just yet.** You need to fully configure your IdP first before exposing your connection to your users.
 6. Leave this page open. You will need to come back to it to complete the setup.
 
-### Create a new Enterprise Application in Azure
+### Create a new enterprise application in Azure
 
-To create a new Enterprise Application in Azure:
+To create a new enterprise application in Azure:
 
 1. Navigate to the [Azure Portal](https://azure.microsoft.com/en-us/get-started/azure-portal) and sign in.
 2. Under the **Azure Services** section, find and select **Enterprise Applications**. You may have to go to the [**All services**](https://portal.azure.com/#allservices) page and then scroll down to the **Identity* section to find it.
@@ -54,19 +49,19 @@ To create a new Enterprise Application in Azure:
 
 ### Assign selected user or group in Azure
 
-Now that you have created the Enterprise Application, you need to assign your users/user groups to it. For example, if you were part of the Clerk organization, you would have access to users and groups in the Clerk organization. In this case, you could assign one or more users or entire groups to the Enterprise Application you just created.
+Now that you have created the enterprise application, you need to assign your users/user groups to it. For example, if you were part of the Clerk organization, you would have access to users and groups in the Clerk organization. In this case, you could assign one or more users or entire groups to the enterprise application you just created.
 
 1. Under the **Getting started** section, select **Assign users and groups**.
 2. Select the **Add user/group** button.
 3. Under **Users**, select the **None Selected** link.
-4. In the search field, enter the user or group of users that you want to assign to the Enterprise Application.
+4. In the search field, enter the user or group of users that you want to assign to the enterprise application.
 5. Select the check box next to the user or group that you want to assign.
 6. Select the **Select** button at the bottom of the page.
 7. Select the **Assign** button at the bottom of the page.
 
 ### Configure single sign-on (SSO) in Azure
 
-After you have assigned the user or group of users to the Enterprise Application, you need to configure the single sign-on (SSO) settings to enable SAML SSO.
+After you have assigned the user or group of users to the enterprise application, you need to configure the single sign-on (SSO) settings to enable SAML SSO.
 
 1. In the navigation sidebar, select **Overview**.
 2. Under the *Getting started* section, select **Set up single sign-on**.
@@ -74,10 +69,12 @@ After you have assigned the user or group of users to the Enterprise Application
 
 ### Configure your service provider
 
-To configure your service provider (Clerk), you will need to add these two fields to your IdP's application:
+To configure your service provider (Clerk), you must add these two fields to your IdP's application:
 
 - **Reply URL (Assertion Consumer Service URL)** - This is a unique identifier for your SAML connection that your IdP application needs.
 - **Identifier (Entity ID)** - This is your application's URL that your IdP will redirect your users back to after they have authenticated in your IdP.
+
+To fill out the appropriate values for these fields:
 
 1. On the **Set up Single Sign-On with SAML** page, you will see the **Basic SAML Configuration** section. Select the **Edit** button. This will open a **Basic SAML Configuration** modal.
 2. Go back to the Clerk Dashboard and scroll down to the **Service Provider configuration** section.
