--- a/docs/authentication/saml/google.mdx
+++ b/docs/authentication/saml/google.mdx
@@ -8,21 +8,19 @@ description: Learn how to integrate Google Workspace with Clerk using SAML SSO.
 <TutorialHero
   beforeYouStart={[
     {
-      title: "Set up a Clerk application",
-      link: "/docs/quickstarts/setup-clerk",
+      title: "Add the Enhanced authentication add-on to your Pro plan",
+      link: "https://clerk.com/pricing"
     },
     {
-      title: "Add the appropriate Clerk SDK to your application",
-      link: "/docs/quickstarts/overview",
-    },
+      title: "Enable email address as an identifier for your application.",
+      link: "/docs/authentication/configuration/sign-up-sign-in-options#identifiers",
+    }
   ]}
 >
 
 - Use Google Workspace to enable single sign-on (SSO) via SAML for your Clerk application.
 
 </TutorialHero>
-
-Integrating Google Workspace with Clerk allows you to use it as an Identity Provider (IdP) for your Clerk application to authenticate your users and manage their access to your application via SAML SSO.
 
 ## Tutorial
 
@@ -35,22 +33,19 @@ To create a SAML connection in Clerk:
 1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com).
 2. In the navigation sidebar, select **User & Authentication > [Enterprise Connections](https://dashboard.clerk.com/last-active?path=user-authentication/enterprise-connections)**.
 3. Select the **Create connection** button.
-4. You will be presented with a modal to create a new connection. Fill in the required fields.
-- **Name** - A unique name for the connection. This is so you can tell your connections apart.
-- **Domain** - The email domain for which you will enable Enterprise SSO.
-- **Identity Provider** - The IdP you are using. For this tutorial, select **Google Workspace**.
-5. Once you have filled in these fields, you will be directed to the **Connection** page which has the configuration settings for the connection you just created. **Do not select the Enable connection toggle just yet.** You need to fully configure your IdP first before exposing your connection to your users while you're in the, sometimes long, process of configuring and testing it.
+4. You will be presented with a modal to create a new connection. Fill in the required fields and for the **Identity Provider**, select **Google Workspace**.
+5. Next, on the **Connection** page, **do not select the Enable connection toggle just yet.** You need to fully configure your IdP first before exposing your connection to your users.
 6. Leave this page open. You will need to come back to it to complete the setup.
 
-### Create a new Enterprise Application in Google
+### Create a new enterprise application in Google
 
-To create a new Enterprise Application in Google:
+To create a new enterprise application in Google:
 
 1. Navigate to the [Google Admin Console](https://admin.google.com/) and sign in.
 2. In the navigation sidebar, under **Apps**, select **Web and mobile apps**.
 3. Select the **Add app** button.
 4. From the dropdown, select **Add custom SAML app**.
-5. In the **App details** section, an **App name** is required. You can also add an **App description** and upload an **App icon** if you wish.
+5. In the **App details** section, an **App name** is required.
 6. Select the **Continue** button.
 
 ### Configure your identity provider
@@ -70,7 +65,7 @@ There are two options for configuring your IdP:
 
 #### Custom configuration
 
-If you choose to manually input the configuration settings for your IdP, you will need to add these three fields to your Clerk settings:
+If you choose to manually input the configuration settings for your IdP, you must add these three fields to your Clerk settings:
 
 - **SSO URL** - This is the unique identifier of your IdP application.
 - **Entity ID** - This is your IdP's URL that Clerk will redirect your users to so that they can authenticate.
@@ -85,11 +80,12 @@ If you choose to manually input the configuration settings for your IdP, you wil
 
 ### Configure your service provider
 
-To configure your service provider (Clerk), you will need to add these three fields to your IdP's application:
+To configure your service provider (Clerk), you will need to add these two fields to your IdP's application:
 
 - **ACS URL** - This is a unique identifier for your SAML connection that your IdP application needs.
 - **Entity ID** - This is your application's URL that your IdP will redirect your users back to after they have authenticated in your IdP.
-- **Metadata URL** - This is the URL to your SAML connection's metadata file. This is the recommended way to configure your SP.
+
+To fill out the appropriate values for these fields:
 
 1. In the Clerk Dashboard, find the **Service Provider configuration** section.
 2. Copy the **ACS URL** and **Entity ID**.
