--- a/docs/authentication/saml/okta.mdx
+++ b/docs/authentication/saml/okta.mdx
@@ -8,21 +8,19 @@ description: Learn how to integrate Okta Workforce with Clerk using SAML SSO.
 <TutorialHero
   beforeYouStart={[
     {
-      title: "Set up a Clerk application",
-      link: "/docs/quickstarts/setup-clerk",
+      title: "Add the Enhanced authentication add-on to your Pro plan",
+      link: "https://clerk.com/pricing"
     },
     {
-      title: "Add the appropriate Clerk SDK to your application",
-      link: "/docs/quickstarts/overview",
-    },
+      title: "Enable email address as an identifier for your application.",
+      link: "/docs/authentication/configuration/sign-up-sign-in-options#identifiers",
+    }
   ]}
 >
 
 - Use Okta Workforce to enable single sign-on (SSO) via SAML for your Clerk application.
 
 </TutorialHero>
-
-Integrating Okta Workforce with Clerk allows you to use it as an Identity Provider (IdP) for your Clerk application to authenticate your users and manage their access to your application via SAML SSO.
 
 ## Tutorial
 
@@ -35,33 +33,32 @@ To create a SAML connection in Clerk:
 1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com).
 2. In the navigation sidebar, select **User & Authentication > [Enterprise Connections](https://dashboard.clerk.com/last-active?path=user-authentication/enterprise-connections)**.
 3. Select the **Create connection** button.
-4. You will be presented with a modal to create a new connection. Fill in the required fields.
-- **Name** - A unique name for the connection. This is so you can tell your connections apart.
-- **Domain** - The email domain for which you will enable Enterprise SSO.
-- **Identity Provider** - The IdP you are using. For this tutorial, select **Okta Workforce**.
-5. Once you have filled in these fields, you will be directed to the **Connection** page which has the configuration settings for the connection you just created. **Do not select the Enable connection toggle just yet.** You need to fully configure your IdP first before exposing your connection to your users while you're in the, sometimes long, process of configuring and testing it.
+4. You will be presented with a modal to create a new connection. Fill in the required fields and for the **Identity Provider**, select **Okta Workforce**.
+5. Next, on the **Connection** page, **do not select the Enable connection toggle just yet.** You need to fully configure your IdP first before exposing your connection to your users.
 6. Leave this page open. You will need to come back to it to complete the setup.
 
-### Create a new Enterprise Application in Okta
+### Create a new enterprise application in Okta
 
-To create a new Enterprise Application in Okta:
+To create a new enterprise application in Okta:
 
 1. Navigate to [Okta](https://www.okta.com/) and sign in.
 2. In the Okta dashboard, select **Admin** in the top right corner.
 3. In the navigation sidebar,  select the **Applications** dropdown and select **Applications**.
 4. Select the **Create App Integration** button.
 5. In the **Create a new app integration** modal, select the **SAML 2.0** option and select the **Next** button.
-6. Once redirected to the **Create SAML Integration** page, fill in the **General Settings** fields. An **App name** is required.  You can also upload an **App logo** if you wish.
+6. Once redirected to the **Create SAML Integration** page, fill in the **General Settings** fields. An **App name** is required.
 7. Select the **Next** button to continue.
 
 ### Configure your service provider
 
 Once you have moved forward from the **General Settings** instructions, you will be presented with the **Configure SAML** page.
 
-To configure your service provider (Clerk), you will need to add these two fields to your IdP's application:
+To configure your service provider (Clerk), you must add these two fields to your IdP's application:
 
 - **Single sign-on URL** - This is a unique identifier for your SAML connection that your IdP application needs.
 - **Audience URI (SP Entity ID)** - This is your application's URL that your IdP will redirect your users back to after they have authenticated in your IdP.
+
+To fill out the appropriate values for these fields:
 
 1. In the Clerk Dashboard, find the **Service Provider configuration** section.
 2. Copy the **Single sign-on URL** and **Audience URI (SP Entity ID)**.
@@ -101,11 +98,11 @@ To make the connection available for your users to authenticate with:
 
 ### Assign selected user or group in Azure
 
-You need to assign your users/user groups to your Enterprise Application. For example, if you were part of the Clerk organization, you would have access to users and groups in the Clerk organization. In this case, you could assign one or more users or entire groups to the Enterprise Application you just created.
+You need to assign your users/user groups to your enterprise application. For example, if you were part of the Clerk organization, you would have access to users and groups in the Clerk organization. In this case, you could assign one or more users or entire groups to the enterprise application you just created.
 
 1. In the Okta dashboard, select the **Assignments** tab.
 2. Select the **Assign** dropdown. You can either select **Assign to people** or **Assign to groups**.
-3. In the search field, enter the user or group of users that you want to assign to the Enterprise Application.
+3. In the search field, enter the user or group of users that you want to assign to the enterprise application.
 4. Select the **Assign** button next to the user or group that you want to assign.
 5. Select the **Done** button to complete the assignment.
 
