utilize signedin and signedout components for dashboard navigation instructions

--- a/docs/authentication/saml/okta.mdx
+++ b/docs/authentication/saml/okta.mdx
@@ -30,8 +30,13 @@ description: Learn how to integrate Okta Workforce with Clerk using SAML SSO.
 
 To create a SAML connection in Clerk:
 
+<SignedIn>
+1. In the Clerk Dashboard, navigate to the [Enterprise Connections](https://dashboard.clerk.com/last-active?path=user-authentication/enterprise-connections) page.
+</SignedIn>
+<SignedOut>
 1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com).
 2. In the navigation sidebar, select **User & Authentication > [Enterprise Connections](https://dashboard.clerk.com/last-active?path=user-authentication/enterprise-connections)**.
+</SignedOut>
 3. Select the **Create connection** button.
 4. You will be presented with a modal to create a new connection. Fill in the required fields and for the **Identity Provider**, select **Okta Workforce**.
 5. Next, on the **Connection** page, **do not select the Enable connection toggle just yet.** You need to fully configure your IdP first before exposing your connection to your users.
