--- a/docs/authentication/saml/overview.mdx
+++ b/docs/authentication/saml/overview.mdx
@@ -5,12 +5,7 @@ description: Clerk supports Enterprise SSO via the SAML protocol so that you can
 
 # Enterprise SSO via SAML
 
-Clerk supports Enterprise SSO via the SAML protocol, enabling you to create authentication strategies for an Identity Provider (IdP). With Enterprise SSO, users can sign in seamlessly using their IdP's credentials and have their user data synchronized with Clerk.
-
-## Requirements
-
-- A Clerk application that includes the [Enhanced authentication add-on](https://clerk.com/pricing), available with the Pro plan.
-- **Email address** enabled as an identifier for your application. See the [Identifiers](/docs/authentication/configuration/sign-up-sign-in-options#identifiers) section to learn more about how to enable it.
+Clerk supports Enterprise SSO via the SAML protocol, enabling you to create authentication strategies for an Identity Provider (IdP). With Enterprise SSO, users can sign in seamlessly using their IdP's credentials and have their user data synchronized with Clerk. You can learn more about the process in the [SAML SSO authentication flows](/docs/authentication/saml/authentication-flows) and [Account linking](/docs/authentication/saml/account-linking) guides, or you can jump straight into integrating an IdP with Clerk by selecting one from the navigation sidebar.
 
 ## Sync user attributes during sign in
 
