--- a/docs/authentication/saml/authentication-flows.mdx
+++ b/docs/authentication/saml/authentication-flows.mdx
@@ -40,7 +40,7 @@ As a result, the flow is susceptible to MITM (man-in-the-middle) attacks in whic
 
 A bad actor could also can intercept the IdP response and replace it with another to make the target user to sign in as the attacker, performing a Login CSRF attack.
 
-Even if the IdP-initiated flow is considered insecure, Clerk tries to mitigate those flaws in order to protect and offer the best possible security for your application and users.
+In order to protect and offer the best possible security for your application and users, Clerk tries to mitigate these risks by implementing several security measures:
 
 #### Unsolicited `InResponseTo` attribute
 
@@ -53,10 +53,12 @@ This prevents bad actors from stealing a response used in an SP-initiated flow a
 Clerk prevents responses from being re-used by consuming them and remembering which have already been used.
 This prevents bad actors from stealing and reusing a response to gain access to a user's account.
 
+#### Multi-factor authentication
+
+Multi-factor authentication (MFA) is a security mechanism that requires users to provide two or more forms of verification before gaining access to their account. By enforcing two different types of verifications, you can drastically improve your user's security.
+
+Clerk supports MFA for a SAML IdP-initiated flow.
+
 #### Use small validation periods
 
-Each SAML response defines when they were issued and when they will expire. As an IdP-initiated flow is expected to be completed within a time frame of seconds, you must ensure that these validation periods are as small as possible.
-
-#### Multi-Factor
-
-MFA is available for the SAML IdP-initiated flow.
+Each SAML response defines when they were issued and when they will expire. As an IdP-initiated flow is expected to be completed within a time frame of seconds, you must ensure that these validation periods are as small as possible to prevent attacks. Common providers, such as Azure, Google, and Okta, handle this. However, if you are using a custom IdP, you must ensure that the validation periods are set correctly.
