--- a/docs/authentication/saml/azure.mdx
+++ b/docs/authentication/saml/azure.mdx
@@ -26,7 +26,7 @@ description: Learn how to integrate Microsoft Azure AD with Clerk using SAML SSO
 
 <Steps>
 
-### Set up Enterprise Connection in Clerk
+### Set up an enterprise connection in Clerk
 
 To create a SAML connection in Clerk:
 
