--- a/docs/authentication/saml/okta.mdx
+++ b/docs/authentication/saml/okta.mdx
@@ -26,7 +26,7 @@ description: Learn how to integrate Okta Workforce with Clerk using SAML SSO.
 
 <Steps>
 
-### Set up Enterprise Connection in Clerk
+### Set up an enterprise connection in Clerk
 
 To create a SAML connection in Clerk:
 
