apply code review suggestions

--- a/docs/authentication/saml/custom-provider.mdx
+++ b/docs/authentication/saml/custom-provider.mdx
@@ -97,7 +97,7 @@ In your IdP dashboard, there should be a section where you can map the IdP's cla
 
 If you have additional claims that you would like to map to Clerk that are not listed in the **Attribute mapping** section, you can do so by following the steps in the [Map other claims](#map-other-claims-optional) section.
 
-### Map every other claim (optional)
+### Map other claims (optional)
 
 In Clerk, the [`User`](/docs/users/overview#user-object) object has a `publicMetadata` property that you can use to store additional information about your users.
 
@@ -105,7 +105,7 @@ To map other claims from your IdP that do not have a direct mapping to Clerk att
 
 For example, say you were using Google as your IdP. Google users have the "Phone number" attribute. Clerk does not have a direct mapping for this attribute, as you can see in the Clerk Dashboard in the **Attribute mapping** section. Instead, in the Google dashboard, you would map Google's "Phone number" claim to `public_metadata_phone_number`. Then, in Clerk, the value for the user's phone number would be saved in the user's `User.publicMetadata` under the key `phone_number`.
 
-[Learn more about how to access the metadata from our APIs.](https://clerk.com/docs/users/metadata)
+[Learn more about how to access the metadata from our APIs.](/docs/users/metadata)
 
 ### Activate your SAML connection
 
