--- a/docs/integrations/databases/firebase.mdx
+++ b/docs/integrations/databases/firebase.mdx
@@ -5,6 +5,8 @@ description: Learn how to integrate Clerk into your Firebase application.
 
 # Integrate Firebase with Clerk
 
+Integrating Firebase with Clerk gives you the benefits of using Firebase's NoSQL database while leveraging Clerk's authentication, prebuilt components, and webhooks.
+
 To enable Firebase integration with your Clerk application, you must provide Clerk with the required Firebase configuration attributes depending on the Firebase features you would require authenticated user access to.
 
 To get started, go to the Clerk Dashboard and navigate to the **[Integrations](https://dashboard.clerk.com/last-active?path=integrations)** page. Turn on the Firebase integration.
